--- a/package.json
+++ b/package.json
@@ -9,12 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@edgestore/react": "^0.1.6",
+    "@edgestore/server": "^0.1.6",
     "@prisma/client": "^5.7.1",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@vercel/postgres": "^0.5.1",
+    "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.302.0",
     "next": "14.0.4",
     "pnpm": "^8.12.1",
     "prisma": "^5.7.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
+    "to": "^0.2.9",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
